bottom overlapping fix

--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -12,7 +12,7 @@ iframe {
   display: block; /* iframes are inline by default */
   border: none; /* Reset default border */
   width: 100%;
-  height: 100%;
+  height: calc(100% - 5px);
 }
 body {
   background-color: #ffffff;
